--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,10 +1,1 @@
-html,
-body {
-  background-color: #fff;
-  color: #636b6f;
-  font-family: 'Nunito', sans-serif;
-  font-weight: 200;
-  font-size: 100%;
-  height: 100vh;
-  margin: 0;
-}
+body,html{background-color:#fff;color:#636b6f;font-family:Nunito,sans-serif;font-weight:200;font-size:100%;height:100vh;margin:0}
